# pomerode-gtk4

./: README.md  com.github.sammarxz.json  com.github.sammarxz.pomerode.yml  meson.build
build-aux/meson/: postinstall.py
data/: com.github.sammarxz.desktop.in  com.github.sammarxz.gschema.xml  com.github.sammarxz.metainfo.xml.in  com.github.sammarxz.pomerode.desktop.in  com.github.sammarxz.pomerode.gresource.xml  com.github.sammarxz.pomerode.gschema.xml  com.github.sammarxz.pomerode.metainfo.xml  com.github.sammarxz.pomerode.service.in  com.github.sammarxz.service.in  meson.build
data/icons/: meson.build
data/icons/ui/: pomerode.gresource.xml  preferences.ui
data/ui/: preferences.ui  window.ui
po/: POTFILES.in  meson.build
src/: application.vala  main.vala  meson.build  pomerode.gresource.xml  preferences.vala  window.ui  window.vala
src/css/: style.css
src/ui/: preferences.ui  window.ui
